--- a/templates/_real_time.html
+++ b/templates/_real_time.html
@@ -4,7 +4,7 @@
                 <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header text-center">Running Time</div>
                             <div class="card-body">
-                                <h4 align="center" id="runningtime" class="card-title">Info card title</h4>
+                                <h5 align="center" id="runningtime" class="card-title">Info card title</h5>
                                 <!-- <span class="card-text">Some </span> -->
                             </div>
                 </div>
@@ -13,7 +13,7 @@
                 <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header text-center">Current Step</div>
                             <div class="card-body">
-                                <h4 align="center" id="current_step" class="card-title">Info card title</h4>
+                                <h5 align="center" id="current_step" class="card-title">Info card title</h5>
                                 <!-- <span class="card-text"> </span> -->
                             </div>
                 </div>
@@ -22,66 +22,51 @@
                 <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
                         <div class="card-header text-center">Total Market Size</div>
                             <div class="card-body">
-                                <h4 align="center" class="card-title" id="total_market_size">Info card title</h4>
-                                <!-- <span class="card-text"></span> -->
-                            </div>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-                        <div class="card-header text-center">World name now</div>
-                            <div class="card-body center">
-                                <h4 align="center" id="worldname" class="card-title">Info card title</h4>
+                                <h5 align="center" class="card-title" id="total_market_size">Info card title</h5>
                                 <!-- <span class="card-text"></span> -->
                             </div>
                 </div>
             </div>
             <div class="col-4">
-                    <div class="card text-white bg-info mb-3" style="max-width: 36rem;">
-                            <div class="card-header text-center">World Description</div>
-                                <div class="card-body">
-                                    <h4 class="card-title">Info card title</h4>
-                                    <!-- <span class="card-text">Some </span> -->
-                                </div>
-                    </div>
+                <div class="card text-white bg-info mb-3" style="max-width: 36rem;">
+                        <div class="card-header text-center">World name now</div>
+                            <div class="card-body center">
+                                <h5 align="center" id="worldname" class="card-title">Info card title</h5>
+                                <!-- <span class="card-text"></span> -->
+                            </div>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="card-body">
+                    <div id="liquid" style="width: 100%; min-height: 110px"></div>                                    
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-5">
+            <div class="col-8">
                 <div id="draggable" class="card">
                     <div class="card-header alert-dark">
                         Graph-Negmas Contract Signed
                     </div>
                     <div class="card-body">
-                        <div id="graph" style="width: 100%; min-height: 400px"></div>
+                        <div id="graph" style="width: 100%; min-height: 300px"></div>
                     </div>
                 </div>
             </div>
-            <div  class="col-5">
-                    <div class="card">
-                            <div class="card-header alert-dark">
-                                Process
-                            </div>
-                            <div class="card-body">
-                                <div id="liquid" style="width: 100%; min-height: 400px"></div>                                    
-                            </div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                                <div class="card-header alert-dark">
+                                    Product produce
+                                </div>
+                                <div class="card-body">
+                                    <div id="bar_product_produce" style="width: 100%; min-height: 300px"></div>                                    
+                                </div>
+                        </div>
                     </div>
-            </div>
-            <div class="col-2">
-                <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
-                    <div class="card-header">Negmas</div>
-                        <div class="card-body">
-                            <h5 class="card-title">Info card title</h5>
-                            <span class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</span>
-                        </div>
                 </div>
-                <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-                        <div class="card-header">Negmas</div>
-                        <div class="card-body">
-                            <h5 class="card-title">System card title</h5>
-                            <span class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</span>
-                        </div>
-                </div>
+
             </div>
         </div>
         <div class="row">
@@ -91,7 +76,7 @@
                                 Negmas-Agents Activation Level
                             </div>
                             <div class="card-body">
-                                <div id="activation" style="width: 100%; min-height: 400px">                                                                      
+                                <div id="activation" style="width: 100%; min-height: 300px">                                                                      
                             </div>
                     </div>
                 </div>
@@ -99,10 +84,10 @@
             <div  class="col">
                     <div class="card">
                             <div class="card-header alert-dark">
-                                    test 
+                                    Buyer and Seller 
                             </div>
                             <div class="card-body">
-                                <div id="grid" style="width: 100%; min-height: 400px"> </div>                                                                                                       
+                                <div id="grid" style="width: 100%; min-height: 300px"> </div>                                                                                                       
                             </div>
                     </div>
             </div>
@@ -128,6 +113,7 @@
         var chart = echarts.init(document.getElementById('graph'), 'white', {renderer: 'canvas'});
         var liquid_chart = echarts.init(document.getElementById('liquid'), 'white', {renderer: 'canvas'});
         var grid_chart = echarts.init(document.getElementById('grid'), 'white', {renderer: 'canvas'});
+        var bar_product_produce_chart = echarts.init(document.getElementById('bar_product_produce'), 'white', {renderer: 'canvas'});
         
         // var chart3d = echarts.init(document.getElementById('activation'), 'white', {renderer: 'canvas'});
         var old_data = [];
@@ -135,13 +121,13 @@
             function () {
                 getData(chart);
                 getLiquidData(liquid_chart);
+                getBarProductProduceData(bar_product_produce_chart);
                 setInterval(RealTimeDynamicData, 1000);
                 getGridData(grid_chart);
                 getBar3dData();
                 // setInterval(getDynamicData, 1000);
             }
         );
-
         function getData() {
             $.ajax({
                 type: "GET",
@@ -169,6 +155,18 @@
                 }
             });
         }
+        function getBarProductProduceData(){
+            $.ajax({
+                type: "GET",
+                url: "http://127.0.0.1:5000/BarProcutProduce",
+                dataType: "json",
+                success: function (result) {
+                    bar_product_produce_chart.setOption(result);
+                    old_data_bar_product_produce = bar_product_produce_chart.getOption();
+                    console.log("old_data_liquid"+old_data_bar_product_produce);
+                }
+            });
+        }
 
         function getLiquidData() {
             $.ajax({
@@ -178,7 +176,7 @@
                 success: function (result) {
                     liquid_chart.setOption(result);
                     old_data_liquid = liquid_chart.getOption().series[0].data;
-                    console.log("old_data_liquid"+old_data_liquid)
+                    console.log("old_data_liquid"+old_data_liquid);
                 }
             });
         }
