--- a/vnegmas/templates/sidebar.html
+++ b/vnegmas/templates/sidebar.html
@@ -32,7 +32,7 @@
                         <a onclick="showAtRight('/real_time')" href="#">Real Time</a>
                     </li>
                     <li>
-                        <a href="#">Offline</a>
+                        <a onclick="showAtRight('/offline')">Offline</a>
                     </li>
                 </ul>
             </li>
